--- a/notebook/Stroke_prediction_Solution.ipynb
+++ b/notebook/Stroke_prediction_Solution.ipynb
@@ -8020,7 +8020,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resemble Unbalanced Data"
+    "### Resample Unbalanced Data"
    ]
   },
   {
